test/samples/invalid/resolving/def_name_repeat1.maruir
fun foo(a: uint8)

fun foo(b: uint8, a:int16)